1999-11-22  Richard frith-Macdonald <richard@brainstorm.co.uk>

	* GNUstepInstaller.m; Use [-orderFrontRegardless] before app is active.
	* nsbrowser.m: ditto
	* nsbrowsercell.m: ditto
	* nscombobox.m: ditto
	* nsimage.m: ditto
	* nsprogressindicator.m: ditto
	* nsscroller.m: ditto
	* nstabview.m: ditto
	* slider.m: ditto
	* windows.m: ditto

1999-11-16  David Lazaro Saz  <khelekir@encomix.es>

	* GNUmakefile (menu_RESOURCE_FILES): Added the Smiley.tiff file as a
	resource to demonstrate one of the new capabilites of the new NSMenu
	additions.

1999-10-18  Lyndon Tremblay  <humasect@coolmail.com>

	* nstextfields.m: Added to test NSTextField, NSSecureTextField.

Tue Oct 12  1999  Nicola Pero  <n.pero@mi.flashnet.it>

	* Calculator: Added icon by Andrew Lindesay; reduced button
 	spacing (suggestion by Andrew Lindesay); added key equivalents.

1999-10-07    <fedor@gnu.org>

	* Calculator: New test from Nicola Pero <n.pero@mi.flashnet.it>

1999-09-09  Gerrit van Dyk <gerritvd@decillion.net>

	* nscombobox.m: Added ComboBox test

1999-08-22  Gerrit van Dyk <gerritvd@decillion.net>

	* nsprogressindicator.m: Added progressIndicator test

1999-08-19  Michael Hanni  <mhanni@sprintmail.com>

	* gstextnetwork.m: some changes.
	* popupbuttons.m: a few changes to help debug problems other
	people have reported.
	* menu.m: moved some stuff around to better allow ui testing.

1999-09-07  Adam Fedor  <fedor@gnu.org>

	* buttons.m ([buttonsController -applicationDidFinishLaunching:]): 
	Move main menu creation to here, since it screws up xdps if it's
	in main - must look into this...

1999-08-21  Richard frith-Macdonald <richard@brainstorm.co.uk>

	Added simple menu with 'quit' item for all test apps.

1999-07-30  Michael Hanni  <mhanni@sprintmail.com>

	* Several images for new popup in popupbuttons.app:
	animations.tiff appearance.tiff configs.tiff dock.tiff (images
	taken from Window Maker, I hope this is ok.)

1999-07-26  Michael Hanni  <mhanni@sprintmail.com>
